--- a/webapp/index.html
+++ b/webapp/index.html
@@ -5,9 +5,9 @@
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>SolicitarCita</title>
 		<script id="sap-ui-bootstrap"
-			src="resources/sap-ui-core.js"
-			data-sap-ui-theme="sap_fiori_3"
-			data-sap-ui-resourceroots='{"SolicitarCita.SolicitarCita": "./"}'
+			src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
+			data-sap-ui-theme="sap_belize"
+			data-sap-ui-resourceroots='{"solicitarcitapr": "./"}'
 			data-sap-ui-compatVersion="edge"
 			data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
 			data-sap-ui-async="true"
@@ -15,6 +15,6 @@
 		</script>
 	</head>
 	<body class="sapUiBody">
-		<div data-sap-ui-component data-name="SolicitarCita.SolicitarCita" data-id="container" data-settings='{"id" : "SolicitarCita"}'></div>
+		<div data-sap-ui-component data-name="solicitarcitapr" data-id="container" data-settings='{"id" : "SolicitarCita"}'></div>
 	</body>
 </html>
