--- a/webapp/test/unit/unitTests.qunit.html
+++ b/webapp/test/unit/unitTests.qunit.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Unit tests for SolicitarCita.SolicitarCita</title>
+	<title>Unit tests for solicitarcitapr</title>
 
 	<script id="sap-ui-bootstrap"
 		src="../../../resources/sap-ui-core.js"
 		data-sap-ui-resourceroots='{
-			"SolicitarCita/SolicitarCita": "../../"			
+			"solicitarcitapr": "../../"			
 		}'>
 	</script>
 
